<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin_min"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_min"
            android:layout_marginBottom="@dimen/activity_vertical_margin_min"
            android:queryHint="@string/search_play_list"
            android:iconifiedByDefault="false"
            android:background="@color/white" />

        <TextView
            style="@style/textViews"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin_min"
            android:text="@string/bohemian_rhapsody_the_original_soundtrack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            style="@style/textViews"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin_min"
            android:text="@string/queen_album_2018"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/queen_image"
            style="@style/imageViews"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin_min"
            android:scaleType="center"
            android:src="@drawable/bohemian_rhapsody" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5"
            android:theme="@style/RatingBar" />

        <Button
            android:id="@+id/play_button_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin_min"
            android:layout_weight="0"
            android:background="@drawable/rounded_edges"
            android:text="@string/play"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>